# ir-tcl

./: CHANGELOG  LICENSE  Makefile.in  NEWS  README  aclocal.m4  att.tcl  buildconf.sh  client.tcl  clientrc.tcl  configure  configure.in  display.tcl  explain.c  explain.tcl  grs.c  ir-tcl.c  ir-tcl.h  ir-tcl.spec  ir-tclp.h  irtcl.dsp  irtcl.dsw  irtdb.tcl  iterate.tcl  marc.c  mem.c  mem.tcl  msearch.tcl  queue.c  select.c  setup.tcl  shell.tcl  tagsets.tcl  tclmain.c  tkmain.c  wais-tcl.c  yaz.m4
bitmaps/: book1  book2  book3  book4  book6  book8
client2/: bib-1.tcl  client.tcl  display.tcl  explain.tcl  irtdb.tcl  setup.tcl  tagsets.tcl
client2/bitmaps/: book5  book7  book9
client2/formats/: line.tcl  medium.tcl  raw.tcl
debian/: changelog  control  rules
doc/: Makefile  ir-assoc.n  ir-scan.n  ir-set.n  ir-tcl.sgml
formats/: line.tcl  medium.tcl  raw.tcl
win/: irtcl.rc  makefile  resource.h
